# Agentic-AI-NetOps-Automation-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
knowledge_base/ansible_references/: cisco_ios_modules.md  juniper_junos_modules.md  paloalto_panos_modules.md
knowledge_base/compliance_policies/: change_management_policy.md  firewall_policy.md  security_baseline.md
knowledge_base/runbooks/: cisco_ios_firewall.md  juniper_junos_firewall.md  paloalto_panos_firewall.md
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  coder.py  executor.py  planner.py  validator.py
src/graph/: __init__.py  nodes.py  orchestrator.py  state.py
src/integrations/: __init__.py  awx.py  github_client.py  servicenow.py  slack.py
src/rag/: __init__.py  ingest.py  query.py  store.py
src/utils/: __init__.py  logger.py  vault.py
src/webhook/: __init__.py  server.py
tests/: __init__.py  test_agents.py  test_config.py  test_planner_live.py  test_rag.py
vault/: README.md  credentials.yml.example
